...
                    android:text="@string/amount_per_serving"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <include
                    android:id="@+id/inc_calories"
                    layout="@layout/nutrition_item"
                    app:name="@{@string/calories}"
                    app:value="@{food.calories}" />

                <include
                    android:id="@+id/inc_saturated_fat"
...
